--- a/Day_8_Computational_Session.qmd
+++ b/Day_8_Computational_Session.qmd
@@ -16,6 +16,8 @@ library(patchwork)
 library(ggrepel)
 library(gghighlight)
 library(paletteer)
+library(gapminder)
+library(sf)
 ```
 
 Read in data
@@ -65,4 +67,49 @@ lizard_counts <- lizards %>%
 ```{r}
 ggplot(data = lizard_counts , aes(x = n , y = fct_reorder(common_name , n))) +
   geom_col() 
+```
+
+```{r}
+ggplot(data = gapminder, aes(x=lifeExp, y = gdpPercap))+
+  geom_point() +
+  annotate("text", x = 40, y = 90000, label = "A LABEL") +
+  geom_hline(yintercept = 70000, linetype = "dotted",color = "purple") +
+  geom_vline(xintercept = mean(gapminder$lifeExp))
+```
+
+```{r}
+gapminder %>% 
+  filter(year %in% c("2002"),
+         continent %in% c("Europe")) %>% 
+  ggplot(aes(x = gdpPercap , y = lifeExp)) +
+  geom_point() +
+  #geom_text_repel(aes(label = country)) +
+  gghighlight(country == "Poland" , label_key = country)
+```
+
+Make a ggplot chart using data only from 2007 , then highlight all countries in Europe adding their country name as the label
+
+```{r}
+gapminder %>% 
+  filter(year %in% c("2007")) %>% 
+  ggplot(aes(x=gdpPercap, y = lifeExp))+
+  geom_point()+
+  geom_text_repel(aes(label = country)) +
+  gghighlight(continent == "Europe")
+  
+
+```
+
+```{r}
+jornada_veg <- read_sf(here("data_raw","spatial_vegetation","doc.kml")) %>% 
+  select(name = Name)
+
+
+ggplot()+
+  geom_sf(data = jornada_veg, aes(fill = name), color = NA)+
+  theme_minimal()+
+  scale_fill_paletteer_d(palette = "ggthemes::manyeys") +
+  theme(panel.background = element_rect(color = "purple", size = 5, fill = "pink"), plot.background = element_rect(fill = "grey"),
+        panel.grid.major = element_line(color = "magenta"),
+        axis.text.x = element_text(color = 'red'))
 ```
